<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/monnaieLayout"
>
    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:background="#ffffff"
        android:gravity="center"
        android:text="@string/conversionTitre"
        android:textColor="#03A9F4"
        android:textSize="19dp"
        android:textStyle="bold"/>
    <EditText
        android:id="@+id/monnaie"
        android:layout_width="match_parent"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="50dp"
        android:hint="@string/conversionHint"
        android:layout_marginRight="10dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="numberDecimal"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="30dp"
        android:gravity="center_horizontal">
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/radioButton01"
            android:text="@string/conversionRadio02"
            android:layout_marginRight="20dp"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/radioButton02"
            android:text="@string/conversionRadio02"
            android:layout_marginRight="20dp"/>

</LinearLayout>
    <Button
        android:id="@+id/buttonConversion"
        android:layout_width="wrap_content"
        android:hint="@string/conversionButton"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:text="Convertir"/>
    <TextView
        android:id="@+id/Resultat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:text="@string/conversionResulat"
        android:textColor="#03A9F4"
        android:textSize="24sp"/>
</LinearLayout>